# ig_repertoire_constructor

./: .gitignore
src/algorithms/block_alignment/: block_alignment_utils.hpp  pairwise_block_aligner.hpp
src/algorithms/hashes/: subject_query_kmer_index.hpp
src/cdr_labeler/: cdr_launch.cpp
src/fast_ig_tools/: CMakeLists.txt  ig_component_splitter.cpp  ig_kplus_vj_finder.cpp  ig_matcher.cpp
src/fast_ig_tools/ig_component_splitter/: CMakeLists.txt  component.cpp  component.hpp  config.cpp  config.hpp  ig_component_splitter.cpp  input_data.cpp  input_data.hpp  processor.cpp  processor.hpp  splitter_algorithm.cpp  splitter_algorithm.hpp  utils.hpp
src/umi_experiments/: cluster_reads.cpp
src/vj_finder/: vj_alignment_info.hpp  vj_finder_config.cpp  vj_finder_config.hpp  vj_parallel_processor.cpp  vj_parallel_processor.hpp  vj_query_aligner.cpp  vj_query_aligner.hpp  vj_query_processing.cpp  vj_query_processing.hpp  vjf_launch.cpp
